# BSA-Final-Project

./: BSA_Clean.py  BSA_project.ipynb  Makefile  README.md  bsa_class_version.py  finalbsa.py  new_bsa.py  pyproject.toml
bsa_final_project_dj_&_sk/: BSA_Clean.py
docs/: mkdocs.yml
docs/docs/: index.md
functions/: __init__.py  analyze_firing_rates.py  apply_manual_fusion.py  calculateidealbinsize.py  check_correlogram_conditions.py  compute_cv_isi.py  compute_fano_factor.py  compute_firing_rate_std.py  compute_firing_rates.py  correlogram.py  cv_fano.py  find_outliers.py  get_spike_times.py  group_psth_plots.py  isi_tih.py  load_dataset.py  merge_datasets.py  plot_correlogram  plot_correlogram_matrix  plot_correlogram_matrix.py  plot_group_figures.py  plot_isi_metrics_single_neurons.py  plot_stacked_raster_and_psth.py  plot_survivor.py  plot_survivor_hazard.py  process_and_plot_dataset.py  process_neuron_data.py  psth_rasterplot.py  psth_twobytwo.py
