[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bsa_final_project_dj_\u0026_sk"
version = "0.0.1"
description = "Our final project for BSA"
authors = [
  { name = "Denise Jaeschke \u0026 Sofia Karageorgiou" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["bsa_final_project_dj_&_sk"]
force_sort_within_sections = true
